--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SECRET_KEY='django-insecure-@&r$)$xpb)f6pm=_73pupatv2#n-%0%d=(cky=kab5ww6&*tzs'
 
-DEBUG=True
+DEBUG=False
 CLOUDINARY_CLOUD_NAME='drc3xiipg'
 CLOUDINARY_API_KEY='321181265585861'
 CLOUDINARY_API_SECRET='KA2L_qJUCyBBZFcyeQDGzH1kfUo'
