--- a/.env
+++ b/.env
@@ -4,3 +4,11 @@ DEBUG=False
 CLOUDINARY_CLOUD_NAME='drc3xiipg'
 CLOUDINARY_API_KEY='321181265585861'
 CLOUDINARY_API_SECRET='KA2L_qJUCyBBZFcyeQDGzH1kfUo'
+
+
+
+# user=postgres.zfhwthqmrcdbeqjyjpeu 
+# password=[YOUR-PASSWORD] 
+# host=aws-0-eu-central-1.pooler.supabase.com
+# port=5432
+# dbname=postgres
